--- a/Application.GUI/ApplicationGUI.ui
+++ b/Application.GUI/ApplicationGUI.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>885</width>
-    <height>885</height>
+    <height>915</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Polygon Partition</string>
@@ -562,14 +568,14 @@
      <x>21</x>
      <y>620</y>
      <width>842</width>
-     <height>251</height>
+     <height>280</height>
     </rect>
    </property>
    <widget class="DrawingArea" name="drar_mainStages_rotated">
     <property name="geometry">
      <rect>
       <x>5</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -588,7 +594,7 @@
     <property name="geometry">
      <rect>
       <x>217</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -607,7 +613,7 @@
     <property name="geometry">
      <rect>
       <x>429</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -626,7 +632,7 @@
     <property name="geometry">
      <rect>
       <x>640</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -648,7 +654,7 @@
     <property name="geometry">
      <rect>
       <x>599</x>
-      <y>44</y>
+      <y>39</y>
       <width>31</width>
       <height>21</height>
      </rect>
@@ -668,7 +674,7 @@
     <property name="geometry">
      <rect>
       <x>810</x>
-      <y>44</y>
+      <y>39</y>
       <width>31</width>
       <height>21</height>
      </rect>
@@ -705,6 +711,102 @@
      <enum>Qt::PlainText</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label_1">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>250</y>
+      <width>200</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Rotate polygon</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>217</x>
+      <y>250</y>
+      <width>200</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Find concave points</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>429</x>
+      <y>250</y>
+      <width>200</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Find optimal convex partition</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>250</y>
+      <width>200</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Find optimal partition</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QWidget" name="convexPartsPartition" native="true">
    <property name="geometry">
@@ -712,14 +814,14 @@
      <x>21</x>
      <y>620</y>
      <width>842</width>
-     <height>251</height>
+     <height>280</height>
     </rect>
    </property>
    <widget class="DrawingArea" name="drar_convexPart_part">
     <property name="geometry">
      <rect>
       <x>5</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -738,7 +840,7 @@
     <property name="geometry">
      <rect>
       <x>217</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -757,7 +859,7 @@
     <property name="geometry">
      <rect>
       <x>429</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -776,7 +878,7 @@
     <property name="geometry">
      <rect>
       <x>640</x>
-      <y>45</y>
+      <y>40</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -876,7 +978,7 @@
     <property name="geometry">
      <rect>
       <x>320</x>
-      <y>21</y>
+      <y>18</y>
       <width>221</width>
       <height>20</height>
      </rect>
@@ -899,6 +1001,165 @@
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>250</y>
+      <width>200</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Rotated convex part</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_info_dividedPart_1">
+    <property name="geometry">
+     <rect>
+      <x>217</x>
+      <y>250</y>
+      <width>200</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Vertical line partition</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_info_dividedPart_2">
+    <property name="geometry">
+     <rect>
+      <x>449</x>
+      <y>242</y>
+      <width>161</width>
+      <height>36</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Vertical partition into equal parts</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_info_dividedPart_3">
+    <property name="geometry">
+     <rect>
+      <x>639</x>
+      <y>242</y>
+      <width>201</width>
+      <height>36</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Optimal partition along an orthogonal grid into equal parts</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_info_notDividedPart">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>110</y>
+      <width>420</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>This convex part is not divided into smaller polygons, since it satisfies the restrictions on the area of ​​this problem.</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_info_numOfSplittedParts">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>20</y>
+      <width>200</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Number of splitted parts: 12</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QWidget" name="convexPartitions" native="true">
    <property name="enabled">
@@ -909,14 +1170,14 @@
      <x>21</x>
      <y>620</y>
      <width>842</width>
-     <height>251</height>
+     <height>280</height>
     </rect>
    </property>
    <widget class="DrawingArea" name="drar_partitionToConvex_current">
     <property name="geometry">
      <rect>
-      <x>585</x>
-      <y>45</y>
+      <x>600</x>
+      <y>60</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -982,8 +1243,8 @@
    <widget class="QPushButton" name="btn_goToPrevPartition">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>130</y>
+      <x>560</x>
+      <y>140</y>
       <width>31</width>
       <height>30</height>
      </rect>
@@ -1000,8 +1261,8 @@
    <widget class="QPushButton" name="btn_goToNextPartition">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>130</y>
+      <x>810</x>
+      <y>140</y>
       <width>31</width>
       <height>30</height>
      </rect>
@@ -1018,8 +1279,8 @@
    <widget class="DrawingArea" name="drar_partitionToConvex_optimal">
     <property name="geometry">
      <rect>
-      <x>55</x>
-      <y>45</y>
+      <x>40</x>
+      <y>60</y>
       <width>200</width>
       <height>200</height>
      </rect>
@@ -1037,8 +1298,8 @@
    <widget class="QLabel" name="lbl_partitionToConvexParts_optimal">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>20</y>
+      <x>85</x>
+      <y>30</y>
       <width>111</width>
       <height>21</height>
      </rect>
@@ -1061,8 +1322,8 @@
    <widget class="QLabel" name="lbl_numOfConvexPartitions">
     <property name="geometry">
      <rect>
-      <x>585</x>
-      <y>20</y>
+      <x>600</x>
+      <y>30</y>
       <width>200</width>
       <height>20</height>
      </rect>
@@ -1085,6 +1346,218 @@
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>60</y>
+      <width>241</width>
+      <height>202</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QLabel" name="label">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>151</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Area of polygons that cannot be splitted:</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>151</width>
+       <height>55</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Percentage of polygons' area that cannot be splitted:</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>140</y>
+       <width>151</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Shape optimization function value:</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_info_nonDividedArea">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>20</y>
+       <width>60</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>4354623</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_info_optimisationFuncValue">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>160</y>
+       <width>65</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>25.65</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_info_notDividedPercent">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>90</y>
+       <width>60</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>1%</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QProgressBar" name="progressBar">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>310</y>
+     <width>118</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
+   </property>
+   <property name="textVisible">
+    <bool>false</bool>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
