--- a/Application.GUI/ApplicationGUI.ui
+++ b/Application.GUI/ApplicationGUI.ui
@@ -62,12 +62,15 @@
    <property name="currentIndex">
     <number>0</number>
    </property>
+   <property name="usesScrollButtons">
+    <bool>false</bool>
+   </property>
    <property name="tabBarAutoHide">
     <bool>false</bool>
    </property>
    <widget class="QWidget" name="mainTab">
     <attribute name="title">
-     <string>Main</string>
+     <string>Parameters</string>
     </attribute>
     <widget class="QGroupBox" name="qrb_polygonProperties">
      <property name="geometry">
@@ -126,7 +129,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>40</y>
+        <y>35</y>
         <width>91</width>
         <height>21</height>
        </rect>
@@ -144,7 +147,7 @@
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>40</y>
+        <y>35</y>
         <width>42</width>
         <height>23</height>
        </rect>
@@ -168,7 +171,7 @@
        <x>8</x>
        <y>130</y>
        <width>201</width>
-       <height>241</height>
+       <height>221</height>
       </rect>
      </property>
      <property name="font">
@@ -179,29 +182,11 @@
      <property name="title">
       <string>Mesh properties</string>
      </property>
-     <widget class="QPushButton" name="btn_apply_angle">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>200</y>
-        <width>75</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>9</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Apply</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="btn_reset_angle">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>200</y>
+        <x>60</x>
+        <y>180</y>
         <width>75</width>
         <height>30</height>
        </rect>
@@ -219,7 +204,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>40</y>
+        <y>35</y>
         <width>91</width>
         <height>21</height>
        </rect>
@@ -239,7 +224,7 @@
         <x>10</x>
         <y>70</y>
         <width>181</width>
-        <height>111</height>
+        <height>101</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -253,7 +238,7 @@
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>40</y>
+        <y>35</y>
         <width>71</width>
         <height>23</height>
        </rect>
@@ -275,9 +260,9 @@
      <property name="geometry">
       <rect>
        <x>8</x>
-       <y>380</y>
+       <y>360</y>
        <width>201</width>
-       <height>181</height>
+       <height>201</height>
       </rect>
      </property>
      <property name="font">
@@ -292,7 +277,7 @@
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>60</y>
+        <y>58</y>
         <width>71</width>
         <height>20</height>
        </rect>
@@ -304,9 +289,9 @@
      <widget class="QLabel" name="lbl_polygonArea">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>120</x>
         <y>30</y>
-        <width>81</width>
+        <width>71</width>
         <height>20</height>
        </rect>
       </property>
@@ -336,7 +321,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>60</y>
+        <y>58</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -357,7 +342,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>90</y>
+        <y>88</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -378,7 +363,7 @@
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>90</y>
+        <y>88</y>
         <width>71</width>
         <height>20</height>
        </rect>
@@ -391,7 +376,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>120</y>
+        <y>140</y>
         <width>201</width>
         <height>61</height>
        </rect>
@@ -464,17 +449,473 @@
        </property>
       </widget>
      </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>108</y>
+        <width>151</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Restrictions in percent</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignJustify|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="chb_isAreaRestrictionsInPercent">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>120</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QWidget" name="additionalTab">
     <attribute name="title">
      <string>Additional</string>
     </attribute>
-    <widget class="QPushButton" name="btn_saveImages">
+    <widget class="QGroupBox" name="qrb_processingResults">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>180</y>
+       <x>8</x>
+       <y>300</y>
+       <width>201</width>
+       <height>201</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="title">
+      <string>Processing results</string>
+     </property>
+     <widget class="QCheckBox" name="chb_isSave_mainSteps">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>40</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="chb_isSave_partitionIntoConvexParts">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="chb_isSave_convexPartPartition">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>120</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>30</y>
+        <width>131</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Save main steps of algorithm</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>70</y>
+        <width>131</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Save partition into convex parts steps</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>110</y>
+        <width>131</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Save each convex part partition steps</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_saveResults">
+      <property name="geometry">
+       <rect>
+        <x>25</x>
+        <y>160</y>
+        <width>150</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Save results</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="qrb_additionalSettings">
+     <property name="geometry">
+      <rect>
+       <x>8</x>
+       <y>10</y>
+       <width>201</width>
+       <height>111</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="title">
+      <string>Additional settings</string>
+     </property>
+     <widget class="QPushButton" name="btn_drawPoly">
+      <property name="geometry">
+       <rect>
+        <x>25</x>
+        <y>30</y>
+        <width>150</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Draw test polygon</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_uploadMeshFromText">
+      <property name="geometry">
+       <rect>
+        <x>25</x>
+        <y>70</y>
+        <width>150</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Upload mesh</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="qrb_results">
+     <property name="geometry">
+      <rect>
+       <x>8</x>
+       <y>132</y>
+       <width>201</width>
+       <height>151</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="title">
+      <string>Algorithm results</string>
+     </property>
+     <widget class="QLabel" name="label_12">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>101</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Unused area:</string>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::PlainText</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_13">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>101</width>
+        <height>55</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Percentage of unused area:</string>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::PlainText</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_14">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>95</y>
+        <width>121</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Optimization function value:</string>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::PlainText</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_info_nonDividedArea_optimal_2">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>30</y>
+        <width>60</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::PlainText</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_info_notDividedPercent_optimal_2">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>66</y>
+        <width>60</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::PlainText</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_info_optimisationFuncValue_optimal_2">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>110</y>
+        <width>60</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::PlainText</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QPushButton" name="btn_help">
+     <property name="geometry">
+      <rect>
+       <x>33</x>
+       <y>520</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -485,79 +926,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Save image</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_saveMeshAsText">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>230</y>
-       <width>150</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Save mesh </string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_uploadMeshFromText">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>280</y>
-       <width>150</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Upload mesh</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_drawPoly">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>470</y>
-       <width>120</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Draw poly</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_doAlgo">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>510</y>
-       <width>101</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Do algo</string>
+      <string>About</string>
      </property>
     </widget>
    </widget>
